# eesdr-owrx-connector

./: LICENSE  README.md  pyproject.toml  requirements.txt
eesdr_owrx_connector/: connector.py
