[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eesdr-owrx-connector"
version = "0.0.1"
dependencies = [
	"eesdr-tci"
]
authors = [
	{ name="Matthew R. McDougal", email="ka0s@arrl.net"}
]
description = "Connector to use EESDR TCI protocol to feed an OpenWebRX instance."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Topic :: Communications :: Ham Radio"
]

[project.urls]
"Homepage" = "https://github.com/ars-ka0s/eesdr-owrx-connector"
"Bug Tracker" = "https://github.com/ars-ka0s/eesdr-owrx-connector/issues"
